--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul class="nav_links">
+                <li><a href="#">About Me</a></li>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">Resume</a></li>
+                <li><a href="#">About Me</a></li>
+            </ul>
+        </nav>
+        <a class="cta" href="#"><button>Contact</button></a>
+    </header>
+
     <div class="container">
         <section class="one">
-            <h1>First Page</h1>
+           <h1>First Page</h1>
         </section>
         <section class="two">
             <h1>Second Page</h1>
