--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header>
+        <h1>TOLIVER</h1>
         <nav>
             <ul class="nav_links">
                 <li><a href="#">About Me</a></li>
                 <li><a href="#">Work</a></li>
                 <li><a href="#">Resume</a></li>
-                <li><a href="#">About Me</a></li>
             </ul>
         </nav>
         <a class="cta" href="#"><button>Contact</button></a>
