Add hero image and favicon to files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>TOLIVER</h1>
+        <h1 class="nav_title">TOLIVER</h1>
         <nav>
             <ul class="nav_links">
                 <li><a href="#">About Me</a></li>
