Adjust 'about me' section text and header to correct spacing

--- a/index.html
+++ b/index.html
@@ -25,37 +25,38 @@
         <section class="one">
         </section>
         <section class="aboutme-section">
-            <h1 class="aboutme-header">About Me</h1>
-            <p class="aboutme-text">My name is Toliver Crisp and I'm currently learning Full-Stack development at the
-              UT Austin coding bootcamp. I grew up in Fairfield, Connecticut until I went to the College of Charleston
-              in South Carolina. I studied English with a concentration in Creative Writing. During my junior year in Charleston,
-              I discovered my interest in software development by messing around with Python. Little did I know,
-              it would lead me down a rabbit hole of discovery and innovation.</p>
-              <br>
-            <p class="aboutme-text">When I graduate, I'll be able to:</p>
-                <ul class="aboutme-list">
-                    <li>
-                    Build front-end websites from scratch, as well as using ready-made frameworks that enable you to build efficiently
-                    </li>
-                    <li>
-                    Create full-stack single-page web applications using RESTful API routes and AJAX methods, and describe how front-end 
-                    applications communicate with back-end applications and databases
-                    </li>
-                    <li>
-                    Implement structured and unstructured databases to convert static websites into dynamic websites that persist data
-                    </li>
-                    <li>
-                    Build communication skills and demonstrate the foundational computer-science knowledge that is required during technical interviews
-                    </li>
-                    <li>
-                    Apply the accepted and standard basics of social coding—including source control, issue tracking, and functional feedback—as 
-                    part of a development community, while building an application.
-                    </li>
-                    <li>
-                    Demonstrate strong teamwork and project management skills as a collaborator and independent contributor during the development 
-                    cycle of complex projects
-                    </li>
-                </ul>
+            <h1 class="aboutme-header">about me</h1>
+            <div class="aboutme-text">
+                <p class="aboutme-text">My name is Toliver Crisp and I'm currently learning Full-Stack development at the
+                    UT Austin coding bootcamp. I grew up in Fairfield, Connecticut until I went to the College of Charleston
+                    in South Carolina. I studied English with a concentration in Creative Writing. During my junior year in Charleston,
+                    I discovered my interest in software development by messing around with Python. Little did I know,
+                    it would lead me down a rabbit hole of discovery and innovation. <br> <br>When I graduate, I'll be able to:
+                  </p>
+                      <ul class="aboutme-list">
+                          <li>
+                          Build front-end websites from scratch, as well as using ready-made frameworks that enable you to build efficiently
+                          </li>
+                          <li>
+                          Create full-stack single-page web applications using RESTful API routes and AJAX methods, and describe how front-end 
+                          applications communicate with back-end applications and databases
+                          </li>
+                          <li>
+                          Implement structured and unstructured databases to convert static websites into dynamic websites that persist data
+                          </li>
+                          <li>
+                          Build communication skills and demonstrate the foundational computer-science knowledge that is required during technical interviews
+                          </li>
+                          <li>
+                          Apply the accepted and standard basics of social coding—including source control, issue tracking, and functional feedback—as 
+                          part of a development community, while building an application.
+                          </li>
+                          <li>
+                          Demonstrate strong teamwork and project management skills as a collaborator and independent contributor during the development 
+                          cycle of complex projects
+                          </li>
+                      </ul>
+            </div>
         </section>
         <section class="three">
             <h1>Third Page</h1>
