--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <div class="container">
         <section class="one">
+            <h1 class="hero_text"><span class="hero_italics">< h1 ></span>  Clean code starts here.  <span class="hero_italics">< /h1 ></span></h1>
         </section>
         <section class="aboutme-section">
             <h1 class="aboutme-header">about me</h1>
