--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toliver Crisp | Programmer</title>
+    <title>Toliver Crisp</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="icon" type="image/x-icon" href="assets/images/t-favicon.png">
 </head>
 <body>
     <header>
-        <h1 class="nav_title">toliver crisp</h1>
+        <h1 class="nav_title">Toliver Crisp</h1>
         <nav>
             <ul class="nav_links">
-                <li class="nav_list"><a href="#">about me</a></li>
-                <li class="nav_list"><a href="#">work</a></li>
-                <li class="nav_list"><a href="#">resume</a></li>
+                <li class="nav_list"><a href="#">About Me</a></li>
+                <li class="nav_list"><a href="#">Work</a></li>
+                <li class="nav_list"><a href="#">Resume</a></li>
             </ul>
         </nav>
-        <a class="cta" href="#"><button>contact</button></a>
+        <a class="cta" href="#"><button>Contact</button></a>
     </header>
 
     <div class="container">
@@ -26,7 +26,7 @@
             <h1 class="hero_text"><span class="hero_italics">< h1 ></span>  Clean code starts here.  <span class="hero_italics">< /h1 ></span></h1>
         </section>
         <section class="aboutme-section">
-            <h1 class="aboutme-header">about me</h1>
+            <h1 class="aboutme-header">About Me</h1>
             <div class="aboutme-text">
                 <p class="aboutme-text">My name is Toliver Crisp and I'm currently learning Full-Stack development at the
                     UT Austin coding bootcamp. I grew up in Fairfield, Connecticut until I went to the College of Charleston
@@ -59,8 +59,11 @@
                       </ul>
             </div>
         </section>
-        <section class="three">
-            <h1>Third Page</h1>
+        <section class="work_section">
+            <h1 class="work_header">Work</h1>
+            <div class="work_text">
+
+            </div>
         </section>
         <section class="four">
             <h1>Fourth Page</h1>
