Add test image :hover code

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a class="cta" href="#"><button>Contact</button></a>
     </header>
 
-    <div class="container">
+    <div class="aboutme_container">
 
         <!-- About Me -->
         <section class="one">
