Adjust image containers for the 100th time

--- a/index.html
+++ b/index.html
@@ -67,9 +67,27 @@
         <!-- Work -->
         <section class="work_section">
             <h1 class="work_header">Work</h1>
-            <div class="container">
-                <div class="image"></div>
-                <h2 class="text">Text</h2>
+            <div class="container-column">
+                <div class="big_container">
+                    <div class="image_1"></div>
+                    <h2 class="text">Refactored Website</h2>
+                </div>
+                <div class="small_container">
+                    <div class="image_2"></div>
+                    <h2 class="text">Personal Portfolio</h2>
+                </div>
+                <div class="small_container">
+                    <div class="image_3"></div>
+                    <h2 class="text">Rock-Paper-Scissors</h2>
+                </div>
+                <div class="small_container">
+                    <div class="image_4"></div>
+                    <h2 class="text">Coding Quiz</h2>
+                </div>
+                <div class="small_container">
+                    <div class="image_5"></div>
+                    <h2 class="text">Videogame</h2>
+                </div>
             </div>
             
             
