Adjusted class names in HTML for hero section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="aboutme_container">
 
         <!-- About Me -->
-        <section class="one">
+        <section class="hero_section">
             <h1 class="hero_text"><span class="hero_italics">< h1 ></span>  Clean code starts here.  <span class="hero_italics">< /h1 ></span></h1>
         </section>
         <section class="aboutme-section">
