added lawffice project link to personal portfolio

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                 </div>
                 <div class="second_row">
                     <div class="small_container">
-                        <div class="image_2"></div>
-                        <h2 class="text">Personal Portfolio</h2>
+                        <a href="https://github.com/manyLizards/lawffice"><div class="image_2"></div></a>
+                        <h2 class="text">Project 1 - Lawffice</h2>
                     </div>
                     <div class="small_container">
                         <div class="image_3"></div>
